[package]
name = "homochecker-jockey"
version = "0.1.0"
authors = ["uru <mail@nyaa.gg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
argh = "0.1.4"
hyper = "0.14.5"
third-wheel = "0.6.0"
tokio = "1.4.0"
winapi = { version = "0.3.9", features = ["wininet"] }
yura = { git = "https://github.com/2vg/blackcat-rs", package = "yura" }
