[package]
name = "homochecker-jockey"
version = "0.1.0"
authors = ["uru <mail@nyaa.gg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
argh = "0.1.4"
winapi = { version = "0.3.9", features = ["wininet"] }
yura = { git = "https://github.com/2vg/blackcat-rs", package = "yura" }
argus = { git = "https://github.com/2vg/blackcat-rs", package = "argus" }
async-std = "1.9.0"
